# battle-bridge

./: CMakeLists.txt  README.md
data/: user.txt
src/: auth.c  auth.h  board.c  board.h  data.c  data.h  game.c  game.h  gameplay.c  gameplay.h  helper.c  helper.h  main.c  opening.c  opening.h
